--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -11,13 +11,15 @@
 body {
 	margin: 0;
 	background: white;
+    margin-bottom: 150px;
+    clear: both;
 }
 
 nav {
 	background: #2CA3CD;
 	width: 100%;
 	overflow: auto;
-	height: 200px;
+	height: 210px;
 }
 
 ul {
@@ -83,6 +85,7 @@ footer {
 	bottom: 0px;
 	width: 100%;
 	letter-spacing: 1px;
+	display:block;
 }
 
 form2 {
@@ -107,6 +110,7 @@ form2 {
 	{
 	background: #109177;
 }
+
 
 </style>
 </head>
