--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -17,7 +17,7 @@ nav {
 	background: #2CA3CD;
 	width: 100%;
 	overflow: auto;
-	height: 200px;
+	height: 210px;
 }
 
 ul {
@@ -61,6 +61,10 @@ nav a:hover {
 			<a th:href="@{/}">Home</a></li2>
 		</ul>
 	</nav>
-	HomePage content
+	Welcome to SiLpH Photos!
+	
+	Here you can find the best photos in the internet and order it!
+	
+	go to Gallery to find the best albums and the best photos.
 </body>
 </html>
