albums ora è dinamico e funziona n base gli album del db

--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -121,8 +121,13 @@ form2 {
 		</ul>
 	</nav>
 	<div class="container">
-		<a th:text ="${albums}"></a>
 		<ul>
+
+			<li th:each="album : ${albums}">
+				<div class="gallery">
+					<img th:src="${album.imagePath}">
+					<div class="desc" th:text="${album.name}">nome</div>
+				</div>
 		</ul>
 		ciao
 		<div class="gallery">
