commit della ricerca

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -65,6 +65,8 @@ nav a:hover {
 	
 	Here you can find the best photos in the internet and order it!
 	
-	go to Gallery to find the best albums and the best photos.
+	go to Gallery to find the best albums and the best photos.<br>
+	
+	<a th:href="@{/admin_homepage}">as if i were admin</a>
 </body>
 </html>
