--- a/src/main/resources/templates/requestForm.html
+++ b/src/main/resources/templates/requestForm.html
@@ -155,7 +155,7 @@ nav a:hover {
 		</ul>
 	</nav>
 	<div class="form-style-5">
-		<form th:action="@{/submitForm}" method="POST" th:object="${request}">
+		<form th:action="@{/submitRequestForm}" method="POST" th:object="${request}">
 			<fieldset>
 				<legend>
 					<span class="number"></span> Completa la tua richiesta
