--- a/src/main/resources/templates/admin_add.html
+++ b/src/main/resources/templates/admin_add.html
@@ -11,8 +11,6 @@
 body {
 	margin: 0;
 	background: white;
-	margin-bottom: 150px;
-	clear: both;
 }
 
 nav {
@@ -49,71 +47,23 @@ nav a:hover {
 	color: black;
 }
 
-.container {
-	max-width: 1200px;
-	margin: auto;
-	background: #f2f2f2;
-	overflow: auto;
-}
 
-.gallery {
-	margin: 5px;
-	border: 1px solid #ccc;
-	float: left;
-	width: 390px;
-}
-a{
-	color: black;
-	}
-	
-.gallery img {
-	width: 100%;
-	height: auto;
-}
-
-.desc {
-	padding: 15px;
-	text-align: center;
-}
-
-footer {
-	padding: 20px;
-	font-size: 17;
-	font-weight: bold;
-	text-align: center;
-	background: #2CA3CD;
-	colour: white;
-	font-family: Arial;
-	position: fixed;
-	bottom: 0px;
-	width: 100%;
-	letter-spacing: 1px;
-	display: block;
-}
-
-form2 {
-	text-align: right;
-}
-
-.form-style-5 input[type="submit"], .form-style-5 input[type="button"] {
-	display: block;
-	padding: 19px 39px 18px 39px;
-	color: #FFF;
-	margin: 0 auto;
-	background: #1abc9c;
-	font-size: 18px;
-	text-align: right;
-	font-style: normal;
-	border: 2px solid #16a085;
-	border-width: 1px 1px 3px;
-}
-
-.form-style-5 input[type="submit"]:hover, .form-style-5 input[type="button"]:hover
-	{
-	background: #109177;
-}
 </style>
 </head>
 <body>
+	<nav>
+		<ul>
+			<img th:src="@{images/logo.png}">
+			<li2> <a th:href="@{/Login}">Logout</a></li2>
+			<li2> <a th:href="@{/admin_requests}">Requests</a></li2>
+			<li2> <a th:href="@{/admin_search}">Search</a></li2>
+			<li2> <a th:href="@{/admin_add}">Add</a></li2>
+			<li2> <a th:href="@{/}">Home</a></li2>
+		</ul>
+	</nav>
+	<a href="/">Ciao, sei collegato come "nome" "cognome"</a><br>
+	Welcome to SiLpH Photos! Here you can find the best photos in the
+	internet and order it! go to Gallery to find the best albums and the
+	best photos.
 </body>
 </html>
