levato tutta la roba di oauth

--- a/bin/src/main/resources/templates/homepage.html
+++ b/bin/src/main/resources/templates/homepage.html
@@ -3,7 +3,6 @@
 	xmlns="http://www.w3.org/1999/html">
 <head>
 <title>SiLpH</title>
-
 <style>
 * {
 	box-sizing: border-box;
@@ -47,17 +46,25 @@ nav a:hover {
 	background: skyblue;
 	color: black;
 }
+
 </style>
 </head>
 <body>
 	<nav>
 		<ul>
 			<img th:src="@{images/logo.png}">
-			<li2> <a th:href="@{/Login}">Login</a></li2>
-			<li2> <a th:href="@{/Gallery}">Gallery</a></li2>
-			<li2> <a th:href="@{/}">Home</a></li2>
+			<li2>
+			<a th:href="@{/Login}">Login</a></li2>
+			<li2>
+			<a th:href="@{/Gallery}">Gallery</a></li2>
+			<li2>
+			<a th:href="@{/}">Home</a></li2>
 		</ul>
 	</nav>
-	LOGIN		
+	Welcome to SiLpH Photos!
+	
+	Here you can find the best photos in the internet and order it!
+	
+	go to Gallery to find the best albums and the best photos.
 </body>
 </html>
