--- a/src/main/resources/templates/admin_search.html
+++ b/src/main/resources/templates/admin_search.html
@@ -54,11 +54,11 @@ nav a:hover {
 	<nav>
 		<ul>
 			<img th:src="@{images/logo.png}">
-			<li2> <a th:href="@{/Login}">Logout</a></li2>
+			<li2> <a th:href="@{/logout}">Logout</a></li2>
 			<li2> <a th:href="@{/admin_requests}">Requests</a></li2>
 			<li2> <a th:href="@{/admin_search}">Search</a></li2>
 			<li2> <a th:href="@{/admin_add}">Add</a></li2>
-			<li2> <a th:href="@{/}">Home</a></li2>
+			<li2> <a th:href="@{/admin_homepage}">Home</a></li2>
 		</ul>
 	</nav>
 	<a href="/">Sei collegato come "nome" "cognome"</a><br>
