aggiunti metodi mappati /add*form e creati 3 validators

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -50,7 +50,7 @@ nav a:hover {
 </style>
 </head>
 <body>
-	<nav>
+	<nav><!--  <img th:src="@{images/logo.png}">-->
 		<ul>
 			<img th:src="@{images/logo.png}">
 			<li2>
