--- a/src/main/resources/templates/admin_succeded.html
+++ b/src/main/resources/templates/admin_succeded.html
@@ -61,6 +61,8 @@ nav a:hover {
 			<li2> <a th:href="@{/admin_homepage}">Home</a></li2>
 		</ul>
 	</nav>
-	coddio
+	<a href="/">Ciao, sei collegato come "nome" "cognome"</a><br>
+	DAJE
+	
 </body>
 </html>
