--- a/src/main/resources/templates/photos.html
+++ b/src/main/resources/templates/photos.html
@@ -118,7 +118,7 @@ form2 {
 <body>
 	<nav>
 		<ul>
-			<img th:src="@{images/logo.png}">
+			<img th:src="@{/images/logo.png}">
 			<li2> <a th:href="@{/Login}">Login</a></li2>
 			<li2> <a th:href="@{/Gallery}">Gallery</a></li2>
 			<li2> <a th:href="@{/}">Home</a></li2>
