--- a/src/main/resources/templates/admin_add.html
+++ b/src/main/resources/templates/admin_add.html
@@ -67,6 +67,7 @@ nav a:hover {
 	<a th:href="@{/addPhotoForm}">Aggiungi nuova Foto</a><br>
 	<a th:href="@{/addPhotographerForm}">Aggiungi nuovo Fotografo</a><br>
 	<a th:href="@{/addAlbumForm}">Aggiungi nuovo Album</a><br>
+	<a th:href="@{/populateAlbumForm}">Popola un album</a><br>
 	
 	
 </body>
