--- a/src/main/resources/templates/albums_found.html
+++ b/src/main/resources/templates/albums_found.html
@@ -66,7 +66,7 @@ nav a:hover {
 		<ul>
 			<li th:each="album : ${albums}">
 				<div class="gallery">
-					<img th:src="${albums.imagePath}">
+					<img th:src="${album.imagePath}">
 				</div>
 		</ul>
 	</div>
