--- a/src/main/resources/templates/admin_requests.html
+++ b/src/main/resources/templates/admin_requests.html
@@ -67,7 +67,7 @@ nav a:hover {
 		<ul>
 			<li th:each="request : ${requests}">
 				<a th:href="@{'/request/' + ${request.id}}"
-					th:text = "'richesta di ' + ${request.customerName} + ' ' + ${request.customerSurname}}"/>
+					th:text = "'richesta di ' + ${request.customerName} + ' ' + ${request.customerSurname}"/>
 		</ul>
 	</div>
 </body>
