Modificati html, adminName

--- a/src/main/resources/templates/admin_add_album.html
+++ b/src/main/resources/templates/admin_add_album.html
@@ -51,7 +51,7 @@ nav a:hover {
 <body>
 	<nav>
 		<ul>
-			<img th:src="@{images/logo.png}">
+			<img th:src="@{/images/logo.png}">
 			<li2> <a th:href="@{/logout}">Logout</a></li2>
 			<li2> <a th:href="@{/admin_requests}">Requests</a></li2>
 			<li2> <a th:href="@{/admin_search}">Search</a></li2>
@@ -59,7 +59,9 @@ nav a:hover {
 			<li2> <a th:href="@{/admin_homepage}">Home</a></li2>
 		</ul>
 	</nav>
-	<a href="/">Ciao, sei collegato come "nome" "cognome"</a>
+	<div>
+	<a th:text="'Logged in as ' + ${nome}">nome</a>
+	</div>
 	<br>
 
 	<form th:action="@{/submitAlbumForm}" method="POST"
