--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -53,7 +53,7 @@ nav a:hover {
 <body>
 	<nav>
 		<ul>
-			<img th:src="@{images/logo.png}">
+			<img th:src="@{/images/logo.png}">
 			<li2> <a th:href="@{/logout}">Logout</a></li2>
 			<li2> <a th:href="@{/admin_requests}">Requests</a></li2>
 			<li2> <a th:href="@{/admin_search}">Search</a></li2>
@@ -61,6 +61,6 @@ nav a:hover {
 			<li2> <a th:href="@{/admin_homepage}">Home</a></li2>
 		</ul>
 	</nav>
-	coddio
+	<h3>Spiacenti, si è verificato un errore</h3>
 </body>
 </html>
