--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -52,7 +52,7 @@ nav a:hover {
 <body>
 	<nav><!--  <img th:src="@{images/logo.png}">-->
 		<ul>
-			<img th:src="@{images/logo.png}">
+			<img th:src="@{/images/logo.png}">
 			<li2>
 			<a th:href="@{/Login}">Login</a></li2>
 			<li2>
@@ -67,6 +67,5 @@ nav a:hover {
 	
 	go to Gallery to find the best albums and the best photos.<br>
 	
-	<a th:href="@{/admin_homepage}">as if i were admin</a>
 </body>
 </html>
