--- a/src/main/resources/templates/requested.html
+++ b/src/main/resources/templates/requested.html
@@ -52,7 +52,7 @@ nav a:hover {
 <body>
 	<nav>
 		<ul>
-			<img th:src="@{images/logo.png}">
+			<img th:src="@{/images/logo.png}">
 			<li2>
 			<a th:href="@{/Login}">Login</a></li2>
 			<li2>
