--- a/src/main/resources/templates/admin_succeded.html
+++ b/src/main/resources/templates/admin_succeded.html
@@ -53,7 +53,7 @@ nav a:hover {
 <body>
 	<nav>
 		<ul>
-			<img th:src="@{images/logo.png}">
+			<img th:src="@{/images/logo.png}">
 			<li2> <a th:href="@{/logout}">Logout</a></li2>
 			<li2> <a th:href="@{/admin_requests}">Requests</a></li2>
 			<li2> <a th:href="@{/admin_search}">Search</a></li2>
@@ -61,8 +61,11 @@ nav a:hover {
 			<li2> <a th:href="@{/admin_homepage}">Home</a></li2>
 		</ul>
 	</nav>
-	<a href="/">Ciao, sei collegato come "nome" "cognome"</a><br>
-	DAJE
+	<div>
+	<a th:text="'Logged in as ' + ${nome}">nome</a>
+	</div>
+	<br>
+	<h1>OPERAZIONE EFFETTUATA CON SUCCESSO</h1>
 	
 </body>
 </html>
