--- a/src/main/resources/templates/requestForm.html
+++ b/src/main/resources/templates/requestForm.html
@@ -148,7 +148,7 @@ nav a:hover {
 <body>
 	<nav>
 		<ul>
-			<img th:src="@{images/logo.png}">
+			<img th:src="@{/images/logo.png}">
 			<li2> <a th:href="@{/Login}">Login</a></li2>
 			<li2> <a th:href="@{/Gallery}">Gallery</a></li2>
 			<li2> <a th:href="@{/}">Home</a></li2>
