--- a/src/main/resources/templates/requested.html
+++ b/src/main/resources/templates/requested.html
@@ -61,6 +61,6 @@ nav a:hover {
 			<a th:href="@{/}">Home</a></li2>
 		</ul>
 	</nav>
-	SUCCESS!
+	<h3>Richiesta inviata con successo</h3>
 </body>
 </html>
