--- a/src/main/resources/templates/admin_add_album.html
+++ b/src/main/resources/templates/admin_add_album.html
@@ -66,7 +66,7 @@ nav a:hover {
 
 	<form th:action="@{/submitAlbumForm}" method="POST"
 		th:object="${album}">
-		<div>Inserisci nuova foto</div>
+		<div>Inserisci nuovo album</div>
 		<div>Nome:</div>
 		<div>
 			<input type="text" th:field="*{name}"> <a
