--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -61,6 +61,6 @@ nav a:hover {
 			<li2> <a th:href="@{/admin_homepage}">Home</a></li2>
 		</ul>
 	</nav>
-	<h3>Spiacenti, si è verificato un errore</h3>
+	<h3>Spiacenti, si e' verificato un errore</h3>
 </body>
 </html>
